--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,116 @@
-p {
-    color: red;
+nav {
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    margin: 15px;
+    margin-top: 25px; 
+}
+
+a:link {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+a:visited {
+    text-decoration: none;
+    color: black;
+}
+
+
+ul {
+    list-style-type: none;
+}
+
+.left {
+    float: left;
+    padding-right: 10px;
+    padding-top: 5px;
+}
+
+.right {
+    float: right;    
+    padding-right: 10px;
+    padding-top: 5px;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 180px;
+}
+.search_bar_container {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.search_bar {
+    text-align: center;
+    display: inline-block;
+    height: 40px;
+    width: 550px;
+    border-radius: 30px;
+    border-style: groove;
+    border-width: 1px;
+    border-color: rgb(232,232,232);
+    /* box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.1); */
+    overflow-x: auto;
+}
+
+.search_bar:hover {
+    -moz-box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.2);
+}
+
+.search_bar_type {
+    display: inline-block;
+    font-size: 15px;
+    border: none;
+    width: 85%;
+    height: 100%;
+    outline: none;
+}
+
+button {
+    display: inline-block;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.buttons_container {
+    padding-top: 20px;
+}
+
+.buttons {
+    background-color: #f2f2f2;
+    padding: 10px 20px;
+    margin: 5px;
+    border-radius: 5px;
+    color: #696969;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    font-family: Arial, sans-serif;
+    font-size: 15px;
+    height: 80px;
+    background-color:#F5F5F5;
+    color: #696969;
+}
+
+li {
+    padding-right: 5px;
+}
+
+.bottom {
+    font-size: 14px;
+    color: #696969;
 }
